syntax = "proto3";

package chat;

option go_package = "grpc-course-protobuf/pb/chat";

service ChatService { 
  rpc SendMessage (stream ChatMessage) returns (ChatResponse); //Client Streaming
  rpc ReceiveMessage (ReceiveMessageRequest) returns (stream ChatMessage); //Server Streaming
  rpc Chat(stream ChatMessage) returns (stream ChatMessage); //Bidirectional
}

message ChatMessage {
  int64 user_id = 1;
  string content = 2;
}

message ChatResponse {
  string message = 1;
}

message ReceiveMessageRequest {
    int64 user_id = 1;
}